# identification-causes-attrition-esn

./: Analyse_data.ipynb  Modelisation.ipynb  Modelisation_Optimisation.ipynb  Nettoyage.ipynb  Projet IA _ RH.pptx  df.joblib  pyproject.toml  readme  readme.md
notebook/: 1_Analyse.ipynb  2_Nettoyage_Standardisation.ipynb  3_Feature_Engineering.ipynb  4_Modelisation.ipynb  df.joblib
notkebook/: Analyse.ipynb  df.joblib
utils/: scoring.py
