[tool.poetry]
name = "identification-causes-attrition-esn"
version = "0.1.0"
description = ""
authors = ["marintosti12 <marintosti12@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.0"
seaborn = "^0.13.2"
numpy = "1.26.4"
ipython = "^9.3.0"
ipykernel = "^6.29.5"
notebook = "^7.4.3"
shap = "^0.44.1"
xgboost = "^3.0.2"
imbalanced-learn = ">=0.12.3,<0.14"
scikit-learn = ">=1.5.2,<1.6"
scikit-plot = "^0.3.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
